--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,8 @@ test:
 #
 production:
   <<: *default
+  adapter: mysql2
   database: furima_38811_production
-  username: furima_38811
-  password: <%= ENV['FURIMA_38811_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
